Dec 16, 2004

   * JW: Make loading parts silent
   * TS: Fixed bug toplevel printing. Now only pass different
	 variables to dump/3.

Dec 15, 2004

   * JW: Added version to CVS, updated copyright notices, etc.
   * TS: Added automatic printing of constraints on variables
	 in toplevel query.
         